testsuite/tests/properties/invalid_nested_decls/test.out
== main.lkt ==
main.lkt:10:9: error: Invalid declaration inside block: <FunDecl "bar" main.lkt:10:9-10:28>
10 |         fun bar(): Int = 12;
   |         ^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
